# cuTWED_new

./: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  colab_install.py  pyproject.toml  setup.py
docker/: Dockerfile  entrypoint.sh
docs/: api-reference.md  architecture.md  index.md  installation.md
examples/: cutwed_colab_demo.ipynb
include/: cuTWED.hpp  cuda_utils.hpp
python/: CMakeLists.txt  example.py  setup.cfg.in
python/cutwed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/cutwed/backends/: __init__.py  cuda_backend.py  cupy_backend.py  jax_backend.py  numpy_backend.py  torch_backend.py
python/lib/: libcuTWED.dylib
python/python/: cutwed.py  setup.cfg  setup.py
scripts/: compare_implementations.py
src/: cuTWED.cu
tests/: CMakeLists.txt  python_test.py  test_cutwed.cu
tests/non_cuda/: run_tests.py  test_backends.py  test_realistic.py
